@@ -15,6 +15,8 @@
 \usage{
 methods(generic.function, class)
 .S3methods(generic.function, class, envir=parent.frame())
+
+\S3method{print}{MethodsFunction}(x, byclass = attr(x, "byclass"), \dots)
 }
 \arguments{
   \item{generic.function}{a generic function, or a character string naming a
@@ -24,19 +26,26 @@ methods(generic.function, class)
   \item{envir}{the environment in which to look for the definition of
     the generic function, when the generic function is passed as a
     character string.}
+  \item{x}{typically the result of \code{methods(..)}, an \R object of % S3
+    class \code{"MethodsFunction"}, see \sQuote{Value} below.}
+  \item{byclass}{an optional \code{\link{logical}} allowing to override
+    the \code{"byclass"} attribute determining how the result is
+    printed, see \sQuote{Details}.}
+  \item{\dots}{potentially further arguments passed to and from methods;
+    unused currently.}
 }
 
 \details{
-
   \code{methods()} finds S3 and S4 methods associated with either the
   \code{generic.function} or \code{class} argument.  Methods are found in
   all packages on the current \code{search()} path.  \code{.S3methods()}
   finds only S3 methods, \code{.S4methods()} finds only only S4 methods.
 
   When invoked with the \code{generic.function} argument, the
-  \code{print} method displays the signatures (full names) of S3 and S4
-  methods.  S3 methods are printed by pasting the generic function and
-  class together, separated by a \sQuote{.}, as
+  \code{"byclass"} attribute (see Details) is \code{FALSE}, and the
+  \code{print} method by default displays the signatures (full names) of
+  S3 and S4 methods.  S3 methods are printed by pasting the generic
+  function and class together, separated by a \sQuote{.}, as
   \code{generic.class}.  The S3 method name is followed by an asterisk
   \code{*} if the method definition is not exported from the package
   namespace in which the method is defined.  S4 method signatures are
@@ -44,9 +53,9 @@ methods(generic.function, class)
   dispatch, so there may be several classes in the signature
   \code{generic,A,B-method}.
 
-  When invoked with the \code{class} argument, the \code{print} method
-  displays the names of the generic functions associated with the class,
-  \code{generic}.
+  When invoked with the \code{class} argument, \code{"byclass"} is
+  \code{TRUE}, and the \code{print} method by default displays the names
+  of the generic functions associated with the class, \code{generic}.
 
   The source code for all functions is available.  For S3 functions
   exported from the namespace, enter the method at the command line as
@@ -62,24 +71,21 @@ methods(generic.function, class)
   The S3 functions listed are those which \emph{are named like methods}
   and may not actually be methods (known exceptions are discarded in the
   code).
-
 }
 
 \value{
-
   An object of class \code{"MethodsFunction"}, a character vector of
   method names with \code{"byclass"} and \code{"info"} attributes.  The
-  \code{"byclass"} attribute is a logical(1) vector with value
-  \code{TRUE} when the results were obtained with argument \code{class}
-  defined.  The \code{"info"} attribute is a data frame with
-  columns:
+  \code{"byclass"} attribute is a \code{\link{logical}} indicating if
+  the results were obtained with argument \code{class}
+  defined.  The \code{"info"} attribute is a data frame with columns:
   \describe{
-    \item{generic}{character(), the name of the generic.}
-    \item{visible}{logical(), is the column exported from the namespace
+    \item{generic}{\code{\link{character}} vector of the names of the generic.}
+    \item{visible}{logical(), is the method exported from the namespace
       of the package in which it is defined?}
     \item{isS4}{logical(), true when the method is an S4 method.}
-    \item{from}{factor(), the location or package name where the method
-      was found.}
+    \item{from}{a \code{\link{factor}}, the location or package name
+      where the method was found.}
   }
 }
 
@@ -105,6 +111,8 @@ require(stats)
 
 methods(summary)
 methods(class = "aov")    # S3 class
+## The same, with more details and more difficult to read:
+print(methods(class = "aov"), byclass=FALSE)
 methods("[[")             # uses C-internal dispatching
 methods("$")
 methods("$<-")            # replacement function
